# fasc

./: .editorconfig  .gitignore  CMakeLists.txt  Readme.md  meson.build
ast/: CMakeLists.txt  meson.build
ast/include/fas/ast/: BlockStatement.hpp  CallExpression.hpp  Expression.hpp  ExpressionStatement.hpp  FloatExpression.hpp  FunctionExpression.hpp  Identifier.hpp  IntegerExpression.hpp  Node.hpp  Program.hpp  PrototypeExpression.hpp  Statement.hpp
ast/src/: BlockStatement.cpp  CallExpression.cpp  ExpressionStatement.cpp  FloatExpression.cpp  FunctionExpression.cpp  Identifier.cpp  IntegerExpression.cpp  Program.cpp  PrototypeExpression.cpp
ast/tests/: CMakeLists.txt  ast_tests.cpp
docs/: language.md
lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp  meson.build
lexer/include/fas/lexer/: Lexer.hpp
lexer/include/fas/token/: Token.hpp
lexer/src/: Globals.cpp  Lexer.cpp  Token.cpp
lexer/tests/: CMakeLists.txt  lexer_tests.cpp
parser/: CMakeLists.txt  Parser.cpp  Parser.hpp  meson.build
parser/include/fas/parser/: Parser.hpp
parser/src/: Parser.cpp
